refactor and first version of swagger api
