# server/app/api/routes/account.js
@@ -1,24 +1,26 @@
-const ServerUtils = require('../common/utils/server-utils');
-const DatabusCache = require('../common/databus-cache');
-const JsonldUtils = require('../common/utils/jsonld-utils');
-const Constants = require('../common/constants');
+const ServerUtils = require('../../common/utils/server-utils');
+const DatabusCache = require('../../common/databus-cache');
+const JsonldUtils = require('../../common/utils/jsonld-utils');
+const DatabusUtils = require('../../../../public/js/utils/databus-utils');
 
-var databaseManager = require('../common/remote-database-manager');
-var sparql = require('../common/queries/sparql');
-var shaclTester = require('../common/shacl/shacl-tester');
+var databaseManager = require('../../common/remote-database-manager');
+var shaclTester = require('../../common/shacl/shacl-tester');
 var request = require('request');
 var jsonld = require('jsonld');
 var fs = require('fs');
-var defaultContext = require('../common/context.json');
+var defaultContext = require('../../../../model/generated/context.json');
 const pem2jwk = require('pem-jwk').pem2jwk;
+const requestRDF = require('../../common/request-rdf');
+var gstore = require('../../common/remote-database-manager');
+var defaultContext = require('../../common/context.json');
 
-var constructor = require('../common/execute-construct.js');
-var constructAccountQuery = require('../common/queries/constructs/construct-account.sparql');
+var constructor = require('../../common/execute-construct.js');
+var constructAccountQuery = require('../../common/queries/constructs/construct-account.sparql');
 
 module.exports = function (router, protector) {
 
   var cache = new DatabusCache(120);
-  var pkeyPEM = fs.readFileSync(__dirname + '/../../keypair/public-key.pem', 'utf-8');
+  var pkeyPEM = fs.readFileSync(__dirname + '/../../../keypair/public-key.pem', 'utf-8');
   var publicKeyInfo = pem2jwk(pkeyPEM);
 
   let buff = Buffer.from(publicKeyInfo.n, 'base64');
@@ -149,40 +151,140 @@ module.exports = function (router, protector) {
     }
   });
 
-  router.get('/api/account/artifacts', async function (req, res, next) {
+  router.post('/api/account/webid/remove', protector.protect(), async function(req, res, next) {
     try {
 
-      var cacheKey = `ck_artifacts__${req.query.acount}`;
+      var auth = ServerUtils.getAuthInfoFromRequest(req);
+      var webIdUri = decodeURIComponent(req.query.uri);
+    
+      var path = `/${auth.info.accountName}/webid.jsonld`;
+      var accountJson = await gstore.read(auth.info.accountName, path);
+      var expandedGraphs = await jsonld.flatten(await jsonld.expand(accountJson));
 
-      console.log(`Getting artifacts for ${req.query.acount} with CK ${cacheKey}`);
+      expandedGraphs = expandedGraphs.filter(function(value, index, arr) { 
+          return value['@id'] != webIdUri;
+      });
 
-      var artifacts = await cache.getDataCached(cacheKey,
-        () => sparql.data.getArtifactsByAccount(req.query.account));
+      var compactedGraph = await jsonld.compact(expandedGraphs, defaultContext);
+      var result = await gstore.save(auth.info.accountName, path, compactedGraph);
 
-      res.status(200).send(artifacts);
+      res.status(200).send('WebId removed from account.\n');
+      return;
 
-    } catch (err) {
-      res.status(500).send(err);
+
+    } catch(err) {
+      res.status(500).send(err.message);
     }
   });
 
-  router.get('/api/account/collections', async function (req, res, next) {
+  router.post('/api/account/webid/add', protector.protect(), async function(req, res, next) {
+
     try {
+      var auth = ServerUtils.getAuthInfoFromRequest(req);
+      var webIdUri = decodeURIComponent(req.query.uri);
+      var accountUri = `${process.env.DATABUS_RESOURCE_BASE_URL}/${auth.info.accountName}`;
+      var foafAccountPredicate = `http://xmlns.com/foaf/0.1/account`;
 
-      var authInfo = serverUtils.getAuthInfoFromRequest(req);
-      var isOwnProfile = authInfo.authenticated && authInfo.info.accountName == req.query.account;
+      console.log(`Trying to connect ${webIdUri} to ${accountUri}.`);
 
-      var cacheKey = `ck_collections_${isOwnProfile}__${req.query.account}`;
+      var quads = await requestRDF.requestQuads(webIdUri);
+      var canConnect = false;
 
-      console.log(`Getting stats for ${req.query.account} with CK ${cacheKey}`);
+      for(var quad of quads) {
 
-      var collections = await dataLoader.getDataCached(cacheKey,
-        async () => await collectionsDatabase.getCollectionsByPublisher(req.query.account, !isOwnProfile));
+        if(quad.subject.id != webIdUri) {
+          continue;
+        }
 
-      res.status(200).send(collections);
+        if(quad.predicate.id != foafAccountPredicate) {
+          continue;
+        }
 
-    } catch (err) {
-      res.status(500).send(err);
+        if(quad.object.id != accountUri) {
+          continue;
+        }
+
+        console.log(`Backlink found.`);
+        canConnect = true;
+      }
+
+      if(!canConnect) {
+        res.status(403).send('Unable to find valid backlink in WebId document.');
+        return;
+      }
+
+      // Add triple to account!
+      var path = `/${auth.info.accountName}/webid.jsonld`;
+      var accountJson = await gstore.read(auth.info.accountName, path);
+      var expandedGraphs = await jsonld.flatten(await jsonld.expand(accountJson));
+
+      for(var graph of expandedGraphs) {
+        if(graph['@id'] == webIdUri) {
+          res.status(403).send('WebId document already linked to this account.');
+          return;
+        }
+      }
+
+      var addon = {};
+      addon['@id'] = webIdUri;
+      addon[foafAccountPredicate] = { '@id' : accountUri, '@type' : '@id' };
+      expandedGraphs.push(addon);
+
+      var compactedGraph = await jsonld.compact(expandedGraphs, defaultContext);
+      var result = await gstore.save(auth.info.accountName, path, compactedGraph);
+
+      res.status(200).send('WebId linked to account.\n');
+      return;
+
+    } catch(err) {
+      res.status(400).send(err.message);
+    }
+  });
+
+  router.post('/api/account/api-key/create', protector.protect(true), async function (req, res, next) {
+
+    // Create api key for user
+    var auth = ServerUtils.getAuthInfoFromRequest(req);
+
+    if (auth.info.accountName == undefined) {
+      res.status(403).send('Account name is missing.');
+      return;
+    }
+
+    var keyName = decodeURIComponent(req.query.name);
+
+    if(!DatabusUtils.isValidResourceLabel(keyName, 3, 20)) {
+      res.status(403).send('Invalid API key name.');
+      return;
+    }
+
+    if(auth.info.apiKeys != null && auth.info.apiKeys.length >= 10) {
+      res.status(403).send('API key limit reached.');
+      return;
+    }
+
+    var apiKey = protector.addApiKey(req.databus.sub, keyName); 
+    res.status(200).send(apiKey);
+  });
+
+  router.post('/api/account/api-key/delete', protector.protect(true), async function (req, res, next) {
+
+    // Create api key for user
+    var auth = ServerUtils.getAuthInfoFromRequest(req);
+
+    if (auth.info.accountName == undefined) {
+      res.status(403).send('Account name is missing.');
+      return;
+    }
+
+
+    var keyName = decodeURIComponent(req.query.name);
+    var found = protector.removeApiKey(req.oidc.user.sub, keyName);
+
+    if(found) {
+      res.status(200).send();
+    } else {
+      res.status(204).send('API key with that name does not exist.');
     }
   });
 
