# server/app/api/swagger.yml
@@ -250,8 +250,10 @@ paths:
       responses:
         "200":
           description: "OK"
-        "404":
-          description: "Not Found."
+        "204":
+          description: "No Content"
+        "403":
+          description: "Forbidden"
   /{account}/{group}/{artifact}/{version}:
     put:
       summary: "Create / Update DataId"
@@ -467,15 +469,17 @@ paths:
       responses:
         "200":
           description: "OK"
-        "404":
-          description: "Not Found."
+        "204":
+          description: "No Content"
+        "403":
+          description: "Forbidden"
   /{account}/{group}/{artifact}/{version}/{file}:
     get:
       summary: "Get File"
       description: "Get a file from the Databus. The request URI is the Databus file identifier."
       operationId: "get-file"
       tags:
-        - general
+        - dataid
       parameters:
         - name: account
           in: path
@@ -964,224 +968,209 @@ paths:
             example: '37dac6d1e315917bceba4f38564dc529'
   /{account}:
     put:
-      summary: "Get Collection md5-Hash"
-      description: "Search the index of the Databus."
-      operationId: "collection-md5"
+      summary: "Create / Update Account"
+      description: "Creates or updates a Databus Account."
+      operationId: "create-account"
       tags:
         - account
-      consumes:
-        - "application/json"
-      produces:
-        - "text/html"
+      security:
+        - ApiKeyAuth: []
+      parameters:
+        - name: account
+          in: path
+          description: account namespace
+          type: string
+          required: true
+          example: '%USERNAME%'
+      requestBody:
+        description: "Account data as JSONLD."
+        required: true
+        content:
+          application/json:
+            schema:
+              type: json
+              example: '{
+                "@context": "https://downloads.dbpedia.org/databus/context.jsonld",
+                "@graph": [
+                  {
+                      "@id": "http://localhost:3000/%USERNAME%",
+                      "@type": "foaf:PersonalProfileDocument",
+                      "maker": "http://localhost:3000/%USERNAME%#this",
+                      "primaryTopic": "http://localhost:3000/%USERNAME%#this"
+                  },
+                  {
+                      "@id": "http://localhost:3000/%USERNAME%#this",
+                      "@type": [
+                          "dbo:DBpedian",
+                          "foaf:Person"
+                      ],
+                      "name": "%USERNAME%",
+                      "rdfs:comment": "Hello Databus!",
+                      "account": "http://localhost:3000/%USERNAME%"
+                  }
+                ]
+              }'
       responses:
         "200":
-          description: "Request accepted"
-          schema:
-            type: string
-            format: binary
-            example: ''
+          description: "OK"
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: 'Account saved successfully.'
+        "403":
+          description: "Forbidden. The account failed to authenticate."
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Error: Forbidden"
     get:
-      summary: "Get Collection md5-Hash"
-      description: "Search the index of the Databus."
-      operationId: "collection-md5"
+      summary: "Get Account"
+      description: "Retrieve a Databus Account as JSONLD."
+      operationId: "get-account"
       tags:
         - account
-      consumes:
-        - "application/json"
       produces:
-        - "text/html"
+        - "application/json"
+      parameters:
+        - name: account
+          in: path
+          description: account namespace
+          type: string
+          required: true
+          example: '%USERNAME%'
       responses:
         "200":
-          description: "Request accepted"
-          schema:
-            type: string
-            format: binary
-            example: ''
-  /api/account/webid/link:
-    get:
-      summary: "Get Collection md5-Hash"
-      description: "Search the index of the Databus."
+          description: "OK"
+          content:
+            application/ld+json:
+              schema:
+                type: json
+                example: '{
+                  "@id": "%DATABUS_RESOURCE_BASE_URL%/%USERNAME%/cleaned",
+                  "@type": "dataid:Group",
+                  "abstract": "Cleaned datasets from DBpedia",
+                  "description": "Cleaned datasets from DBpedia",
+                  "title": "Cleaned Data",
+                  "@context": {
+                    "title": {
+                      "@id": "http://purl.org/dc/terms/title"
+                    },
+                    "description": {
+                      "@id": "http://purl.org/dc/terms/description"
+                    },
+                    "abstract": {
+                      "@id": "http://purl.org/dc/terms/abstract"
+                    },
+                    "dbo": "http://dbpedia.org/ontology/",
+                    "sec": "https://w3id.org/security#",
+                    "dataid": "http://dataid.dbpedia.org/ns/core#",
+                    "dct": "http://purl.org/dc/terms/",
+                    "dcv": "http://dataid.dbpedia.org/ns/cv#",
+                    "xsd": "http://www.w3.org/2001/XMLSchema#",
+                    "rdfs": "http://www.w3.org/2000/01/rdf-schema#",
+                    "cert": "http://www.w3.org/ns/auth/cert#",
+                    "dcat": "http://www.w3.org/ns/dcat#",
+                    "foaf": "http://xmlns.com/foaf/0.1/"
+                  }
+                }'
+        "404":
+          description: "Not Found."
+          content:
+            text/plain:
+              schema:
+                type: string
+  /api/account/webid/add:
+    post:
+      summary: "Add WebId"
+      description: "Links an external WebId to the authenticated Databus Account."
       operationId: "account-webid-link"
+      security:
+        - ApiKeyAuth: []
       tags:
         - account
-      consumes:
-        - "application/json"
-      produces:
-        - "text/html"
+      parameters:
+        - name: uri
+          in: query
+          description: the WebId uri to link
+          type: string
+          required: true
+          example: 'https://holycrab13.github.io/webid.ttl'
       responses:
         "200":
-          description: "Request accepted"
+          description: "OK"
           schema:
             type: string
-            format: binary
             example: ''
   /api/account/webid/remove:
-    get:
-      summary: "Get Collection md5-Hash"
-      description: "Search the index of the Databus."
+    post:
+      summary: "Remove WebId"
+      description: "Removes an external WebId from the authenticated Databus Account."
       operationId: "account-webid-remove"
+      security:
+        - ApiKeyAuth: []
       tags:
         - account
-      consumes:
-        - "application/json"
-      produces:
-        - "text/html"
+      parameters:
+        - name: uri
+          in: query
+          description: the WebId uri to remove
+          type: string
+          required: true
+          example: 'https://holycrab13.github.io/webid.ttl'
       responses:
         "200":
-          description: "Request accepted"
+          description: "OK"
           schema:
             type: string
-            format: binary
             example: ''
   /api/account/api-key/create:
-    get:
-      summary: "Get Collection md5-Hash"
-      description: "Search the index of the Databus."
+    post:
+      summary: "Create API key"
+      description: "Create a new API key."
       operationId: "account-apikey-create"
+      security:
+        - ApiKeyAuth: []
       tags:
         - account
-      consumes:
-        - "application/json"
-      produces:
-        - "text/html"
+      parameters:
+        - name: name
+          in: query
+          description: the desired name of the api key
+          type: string
+          required: true
+          example: 'default'
       responses:
         "200":
-          description: "Request accepted"
+          description: "OK"
           schema:
-            type: string
-            format: binary
-            example: ''
+            type: json
+            example: '{
+                "name": "default",
+                "key": "2df02a7f-32c4-46cd-9c6e-bd80c72e6e48"
+              }'
   /api/account/api-key/delete:
-    get:
-      summary: "Get Collection md5-Hash"
-      description: "Search the index of the Databus."
+    post:
+      summary: "Delete API key"
+      description: "Delete an existing API key."
       operationId: "account-apikey-delete"
+      security:
+        - ApiKeyAuth: []
       tags:
         - account
-      consumes:
-        - "application/json"
-      produces:
-        - "text/html"
+      parameters:
+        - name: name
+          in: query
+          description: the name of the api key to delete
+          type: string
+          required: true
+          example: 'default'
       responses:
         "200":
-          description: "Request accepted"
-          schema:
-            type: string
-            format: binary
-            example: ''
-  /api/account/statistics:
-    get:
-      summary: "Get Collection Statistics"
-      description: "Search the index of the Databus."
-      operationId: "collection-statistics"
-      tags:
-        - account
-      consumes:
-        - "application/json"
-      produces:
-        - "text/html"
-      parameters:
-        - in: body
-          name: body
-          description: "Metadata in JSONLD. May contain at most one group and one version metadata graph."
+          description: "OK"
           schema:
             type: json
-            example: '{
-              "@context": "https://downloads.dbpedia.org/databus/context.jsonld",
-              "@graph": [
-                {
-                  "@id": "%DATABUS_RESOURCE_BASE_URL%/%USERNAME%/cleaned",
-                  "@type": "Group",
-                  "title": "Cleaned Data",
-                  "abstract": "Cleaned datasets from DBpedia",
-                  "description": "Cleaned datasets from DBpedia"
-                },
-                {
-                  "@type": "Dataset",
-                  "@id": "%DATABUS_RESOURCE_BASE_URL%/%USERNAME%/cleaned/geonames/2022-02-09#Dataset",
-                  "hasVersion": "2022-02-09",
-                  "title": "Cleaned Geonames",
-                  "abstract": "Cleaned version of the geonames dataset from DBpedia",
-                  "description": "Cleaned version of the geonames dataset from DBpedia",
-                  "license": "http://creativecommons.org/licenses/by/4.0/",
-                  "distribution": [
-                    {
-                      "@id": "%DATABUS_RESOURCE_BASE_URL%/%USERNAME%/cleaned/geonames/2022-02-09#geonames.ttl",
-                      "@type": "Part",
-                      "file": "%DATABUS_RESOURCE_BASE_URL%/%USERNAME%/cleaned/geonames/2022-02-09/geonames.ttl",
-                      "format": "ttl",
-                      "compression": "none",
-                      "downloadURL": "https://holycrab13.github.io/webid.ttl",
-                      "byteSize": "2730",
-                      "sha256sum": "d61a05ca4810367f361f17500304a168aab27a3119c93a18c00bce1775dfd6b1"
-                    }
-                  ]
-                }
-              ]
-            }'
-      responses:
-        "202":
-          description: "Request accepted"
-          schema:
-            type: string
-            format: binary
-            example: 
-  /api/account/activity:
-    get:
-      summary: "Get Collection Statistics"
-      description: "Search the index of the Databus."
-      operationId: "collection-statistics"
-      tags:
-        - account
-      consumes:
-        - "application/json"
-      produces:
-        - "text/html"
-      parameters:
-        - in: body
-          name: body
-          description: "Metadata in JSONLD. May contain at most one group and one version metadata graph."
-          schema:
-            type: json
-            example: '{
-              "@context": "https://downloads.dbpedia.org/databus/context.jsonld",
-              "@graph": [
-                {
-                  "@id": "%DATABUS_RESOURCE_BASE_URL%/%USERNAME%/cleaned",
-                  "@type": "Group",
-                  "title": "Cleaned Data",
-                  "abstract": "Cleaned datasets from DBpedia",
-                  "description": "Cleaned datasets from DBpedia"
-                },
-                {
-                  "@type": "Dataset",
-                  "@id": "%DATABUS_RESOURCE_BASE_URL%/%USERNAME%/cleaned/geonames/2022-02-09#Dataset",
-                  "hasVersion": "2022-02-09",
-                  "title": "Cleaned Geonames",
-                  "abstract": "Cleaned version of the geonames dataset from DBpedia",
-                  "description": "Cleaned version of the geonames dataset from DBpedia",
-                  "license": "http://creativecommons.org/licenses/by/4.0/",
-                  "distribution": [
-                    {
-                      "@id": "%DATABUS_RESOURCE_BASE_URL%/%USERNAME%/cleaned/geonames/2022-02-09#geonames.ttl",
-                      "@type": "Part",
-                      "file": "%DATABUS_RESOURCE_BASE_URL%/%USERNAME%/cleaned/geonames/2022-02-09/geonames.ttl",
-                      "format": "ttl",
-                      "compression": "none",
-                      "downloadURL": "https://holycrab13.github.io/webid.ttl",
-                      "byteSize": "2730",
-                      "sha256sum": "d61a05ca4810367f361f17500304a168aab27a3119c93a18c00bce1775dfd6b1"
-                    }
-                  ]
-                }
-              ]
-            }'
-      responses:
-        "202":
-          description: "Request accepted"
-          schema:
-            type: string
-            format: binary
             example: ''
 definitions:
   ValidationResult:
